First working version

--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -16,14 +16,84 @@
    "outputs": [],
    "source": [
     "from flask import Flask, render_template, request, flash\n",
+    "from math import sin, cos, tan, pi\n",
+    "\n",
     "app = Flask(__name__)\n",
+    "\n",
+    "#key needed\n",
+    "app.secret_key = \"my_secret_key\"\n",
+    "\n",
+    "#used to pass the same variables in all routes\n",
+    "@app.context_processor\n",
+    "def inject_maths_operations():\n",
+    "    #operations dictionary\n",
+    "    maths_operations = ['add', 'subtract', 'multiply', 'divide', 'modulus', 'exponential', 'sin', 'cos' , 'tan']    \n",
+    "    return dict(maths_operations = maths_operations, error_msg = \"\")\n",
     "\n",
     "@app.route(\"/\")\n",
     "def index():    \n",
-    "    #operations dictionary\n",
-    "    math_operations = ['add', 'subtract', 'multiply', 'divide', 'modulus', 'exponential']\n",
+    "    return render_template(\"index.html\")\n",
+    "\n",
+    "@app.route(\"/calculate\", methods=['POST'])\n",
+    "def calculate():\n",
+    "    #Retrieve POST data    \n",
+    "    num1 = request.form['num1']\n",
+    "    num2 = request.form['num2']        \n",
+    "    operation = request.form['operation']\n",
     "    \n",
-    "    return render_template(\"index.html\", math_operations=math_operations)\n",
+    "    \n",
+    "    if operation in ['sin', 'cos', 'tan']:\n",
+    "        num2 = ''\n",
+    "    \n",
+    "    \n",
+    "    if num1 != '':\n",
+    "        num1 = int(request.form['num1'])\n",
+    "    \n",
+    "    if num2 != '':\n",
+    "        num2 = int(request.form['num2'])\n",
+    "    \n",
+    "    #Initialize result\n",
+    "    result = \"\" \n",
+    "\n",
+    "    #set error message to empty before operation\n",
+    "    error_msg = \"\"\n",
+    "    \n",
+    "    #Do operations\n",
+    "    if operation == 'add':\n",
+    "        result = num1 + num2\n",
+    "    elif operation == 'subtract':\n",
+    "        result = num1 - num2\n",
+    "    elif operation == 'multiply':\n",
+    "        result = num1 * num2\n",
+    "    elif operation == 'divide':\n",
+    "        if num2 == 0:\n",
+    "            error_msg = \"Division by zero not allowed\"\n",
+    "        else:\n",
+    "            result = num1 / num2\n",
+    "    elif operation == 'modulus':\n",
+    "        result = num1 % num2\n",
+    "    elif operation == 'exponential':\n",
+    "        result = num1 ** num2\n",
+    "    elif operation == 'sin':\n",
+    "        result = sin(num1)        \n",
+    "    elif operation == 'cos':\n",
+    "        result = math.cos(num1)\n",
+    "    elif operation == 'tan':\n",
+    "        result = math.tan(num1)\n",
+    "    else:\n",
+    "        result = ''\n",
+    "    \n",
+    "    # Division by zero:    flash(\"Error\")\n",
+    "\n",
+    "    #render variables on template\n",
+    "    return render_template(\n",
+    "        \"index.html\",\n",
+    "        num1 = num1,\n",
+    "        num2 = num2,\n",
+    "        operation = operation,\n",
+    "        result = str(result),\n",
+    "        error_msg = error_msg\n",
+    "    )\n",
     "    \n",
     "if __name__ == '__main__': #we are in the same file as module\n",
     "    app.run()"
@@ -32,7 +102,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8f23669",
+   "id": "b9715b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sin, cos, tan\n",
+    "\n",
+    "sin(90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f493222",
    "metadata": {},
    "outputs": [],
    "source": []
