--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8942f410",
    "metadata": {},
    "outputs": [
@@ -29,8 +29,7 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [20/Sep/2023 18:41:48] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Sep/2023 18:41:58] \"POST /calculate HTTP/1.1\" 400 -\n"
+      "127.0.0.1 - - [20/Sep/2023 19:36:58] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
